Give discard pile an overflow to scroll through history when full of cards, and fix deck reshuffle method to leave last discarded card in pile

--- a/golf-fe/src/Game.module.css
+++ b/golf-fe/src/Game.module.css
@@ -1,6 +1,5 @@
 .game_container {
   height: 100%;
-  margin-top: 1rem;
   position: relative;
   display: flex;
   flex-flow: column;
@@ -32,18 +31,24 @@
   align-items: center;
   text-align: center;
   position: absolute;
-  width: 500px;
-  top: 53%;
-  left: 51%;
+  max-width: 70%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  top: 56%;
   transform: translate(-50%, -50%);
   z-index: 999;
 }
 
 .draw_and_discard_piles {
+  max-width: 100%;
   display: flex;
   column-gap: 0.5rem;
 }
 
+.discard_pile_container {
+  display: flex;
+  max-width: 100%;
+}
 .card_content_container {
   margin-top: 0.2rem;
 }
@@ -54,7 +59,6 @@
   color: #374151;
   padding: 0.3rem;
   border-radius: 4px;
-  /* background-color: #f87171; */
   font-weight: bolder;
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
 }
