--- a/golf-fe/src/PlayerHands.module.css
+++ b/golf-fe/src/PlayerHands.module.css
@@ -6,7 +6,7 @@
 }
 .parent {
   position: absolute;
-  top: 54%;
+  top: 57%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10%;
