--- a/golf-fe/src/TheDayThatForm.module.css
+++ b/golf-fe/src/TheDayThatForm.module.css
@@ -1,5 +1,5 @@
 .form_container {
-  margin-top: 0.3rem;
+  margin-top: 1.3rem;
 }
 
 .form {
